// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu should render as default 1`] = `
.emotion-0 {
  display: none;
  position: absolute;
  box-sizing: border-box;
  min-width: 100%;
}

<div>
  <nav
    class="emotion-0"
  >
    <li>
      one
    </li>
    <li>
      two
    </li>
    <li>
      three
    </li>
  </nav>
</div>
`;

exports[`Menu should render open 1`] = `
.emotion-0 {
  position: absolute;
  box-sizing: border-box;
  min-width: 100%;
}

<div>
  <nav
    class="emotion-0"
    open=""
  >
    <li>
      one
    </li>
    <li>
      two
    </li>
    <li>
      three
    </li>
  </nav>
</div>
`;
